fix: Journal form overflow bug resolved

--- a/cranberry/src/components/Dashboard/Dashboard.css
+++ b/cranberry/src/components/Dashboard/Dashboard.css
@@ -12,6 +12,7 @@
 .dash-section {
   padding: 20px;
   width: 100%;
+  height: 100vh;
   border-radius: 10px;
   background: whitesmoke;
 }
